split users from auth and update user
